# esp-miner-rs

./: Cargo.toml  justfile  readme.md  shell.nix
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: main.rs  power.rs  variants.rs
