[package]
name = "esp-miner-rs"
version = "0.1.0"
authors = ["Georges Palauqui <g.palauqui@gptechinno.com>"]
edition = "2021"
description = "Rust based firmware for BitaxeMax"
repository = "https://github.com/bitaxeorg/esp-miner-rs"
license = "MIT OR Apache-2.0"

keywords = ["embedded", "embedded-hal", "esp", "esp32s3", "no-std"]
categories = ["embedded", "no-std", "bitcoin"]

[dependencies]
embassy-executor = { version = "0.5.0", features = ["task-arena-size-40960"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-backtrace = { version = "0.13.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = [ "async", "embedded-hal", "esp32s3", "log" ] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32s3"] }
esp-println = { version = "0.10.0", features = ["esp32s3", "log"] }
esp-wifi = { version = "0.7.1", features = [
    "async",
    "embassy-net", 
    "esp32s3",
    "phy-enable-usb",
    "utils",
    "wifi",
    "wifi-default",
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
stratum-v1 = { version = "0.1.0", features = ["log"], git = "https://github.com/Foundation-Devices/foundation-rs.git", branch = "stratum-v1" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
