[package]
name = "esp-miner-rs"
version = "0.1.0"
authors = ["Georges Palauqui <g.palauqui@gptechinno.com>"]
edition = "2021"
description = "Rust based firmware for BitaxeMax"
repository = "https://github.com/bitaxeorg/esp-miner-rs"
license = "MIT OR Apache-2.0"

keywords = ["embedded", "embedded-hal", "esp", "esp32s3", "no-std"]
categories = ["embedded", "no-std", "bitcoin"]

[dependencies]
defmt = "0.3.10"
ds4432 = { version = "0.2.1", default-features = false, features = [
    "async",
    "core-error",
    "defmt-03",
] }
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-12288"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.6.0", features = [
    "defmt",
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
emc2101 = { version = "1.0.0", default-features = false, features = [
    "async",
    "defmt-03",
] }
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
    "defmt",
    "esp32s3",
    "exception-handler",
    "panic-handler",
] }
esp-hal = { version = "0.23.1", features = ["defmt", "esp32s3"] }
esp-hal-embassy = { version = "0.6.0", features = ["defmt", "esp32s3"] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32s3"] }
esp-wifi = { version = "0.12.0", features = [
    "defmt",
    "esp32s3",
    "utils",
    "wifi",
] }
heapless = { version = "0.8.0", default-features = false, features = [
    "defmt-03",
] }
ina260 = { version = "0.4.0", features = [
    "defmt-03",
], git = "https://github.com/korbin/ina260.git" }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
stratum-v1 = { version = "0.1.0", features = [
    "defmt-03",
], git = "https://github.com/Foundation-Devices/foundation-rs.git", branch = "stratum-v1" }

[features]
bitaxe-max = []
bitaxe-ultra = []

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
